[Feat] Implemented Read & Write Inventory Management