@@ -1,14 +1,16 @@
 package com.sg.obs.itemmanagement.ui.view;
 
 
+import com.sg.obs.base.ui.component.ConfirmDeleteDialog;
 import com.sg.obs.base.ui.component.PaginatedGrid;
+import com.sg.obs.base.utils.DatetimeUtils;
 import com.sg.obs.itemmanagement.domain.ItemDto;
 import com.sg.obs.itemmanagement.service.ItemService;
+import com.sg.obs.security.AppRoles;
 import com.vaadin.flow.component.UI;
 import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.button.ButtonVariant;
 import com.vaadin.flow.component.dialog.Dialog;
-import com.vaadin.flow.component.html.Paragraph;
 import com.vaadin.flow.component.notification.Notification;
 import com.vaadin.flow.component.notification.NotificationVariant;
 import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
@@ -19,25 +21,22 @@ import com.vaadin.flow.data.value.ValueChangeMode;
 import com.vaadin.flow.router.Menu;
 import com.vaadin.flow.router.PageTitle;
 import com.vaadin.flow.router.Route;
-import jakarta.annotation.security.PermitAll;
+import io.micrometer.common.util.StringUtils;
+import jakarta.annotation.security.RolesAllowed;
 
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.time.format.FormatStyle;
 import java.util.Objects;
 
 @Route("items")
 @PageTitle("Item Management")
 @Menu(title = "Items Management", icon = "vaadin:clipboard-check", order = 0)
-@PermitAll
+@RolesAllowed({AppRoles.ADMIN})
 public class ItemManagementView extends VerticalLayout {
 
-    private final ItemService itemService;
+    public static final String PRICE_FIELD_LABEL = "Price";
+    private final transient ItemService itemService;
 
     private final TextField nameField = new TextField("Name");
-    private final NumberField priceField = new NumberField("Price");
-    private final Button addButton = new Button("Add Item");
-    private final TextField filterField = new TextField("Filter by Name or ID");
+    private final NumberField priceField = new NumberField(PRICE_FIELD_LABEL);
 
     private PaginatedGrid<ItemDto> paginatedGrid;
 
@@ -45,12 +44,14 @@ public class ItemManagementView extends VerticalLayout {
         this.itemService = itemService;
 
         nameField.setPlaceholder("Item name");
-        priceField.setPlaceholder("Price");
+        priceField.setPlaceholder(PRICE_FIELD_LABEL);
 
+        TextField filterField = new TextField("Filter by Name or ID");
         filterField.setPlaceholder("Filter by Name or ID...");
         filterField.setValueChangeMode(ValueChangeMode.EAGER);
         filterField.addValueChangeListener(e -> paginatedGrid.setFilter(e.getValue()));
 
+        Button addButton = new Button("Add Item");
         addButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
         addButton.addClickListener(e -> addItem());
 
@@ -64,9 +65,9 @@ public class ItemManagementView extends VerticalLayout {
 
         paginatedGrid.addColumn(ItemDto::getId, "ID").setSortable(true);
         paginatedGrid.addColumn(ItemDto::getName, "Name").setSortable(true);
-        paginatedGrid.addColumn(ItemDto::getPrice, "Price").setSortable(true);
-        paginatedGrid.addColumn(item -> formatDate(item.getCreatedDate()), "Created").setSortable(true).setAutoWidth(true);
-        paginatedGrid.addColumn(item -> formatDate(item.getUpdatedDate()), "Updated").setSortable(true).setAutoWidth(true);
+        paginatedGrid.addColumn(ItemDto::getPrice, PRICE_FIELD_LABEL).setSortable(true);
+        paginatedGrid.addColumn(item -> DatetimeUtils.formatDateShort(item.getCreatedDate()), "Created").setSortable(true).setAutoWidth(true);
+        paginatedGrid.addColumn(item -> DatetimeUtils.formatDateShort(item.getUpdatedDate()), "Updated").setSortable(true).setAutoWidth(true);
         paginatedGrid.addColumn(ItemDto::getStock, "Stock").setSortable(true);
 
         paginatedGrid.addActionColumn(this::openEditDialog, this::confirmDelete);
@@ -81,7 +82,7 @@ public class ItemManagementView extends VerticalLayout {
         var name = nameField.getValue();
         var price = priceField.getValue();
 
-        if (name == null || name.isBlank() || price == null || price < 0) {
+        if (StringUtils.isBlank(name) || price == null || price < 0) {
             Notification.show("Please fill all fields correctly", 3000, Notification.Position.MIDDLE)
                     .addThemeVariants(NotificationVariant.LUMO_ERROR);
             return;
@@ -106,7 +107,7 @@ public class ItemManagementView extends VerticalLayout {
         TextField updatedName = new TextField("Name");
         updatedName.setValue(item.getName());
 
-        NumberField updatedPrice = new NumberField("Price");
+        NumberField updatedPrice = new NumberField(PRICE_FIELD_LABEL);
         updatedPrice.setValue(item.getPrice());
 
         Button save = new Button("Save");
@@ -138,32 +139,9 @@ public class ItemManagementView extends VerticalLayout {
     }
 
     private void confirmDelete(ItemDto item) {
-        Dialog dialog = new Dialog();
-        dialog.setHeaderTitle("Confirm Delete");
-        dialog.add(new Paragraph("Are you sure you want to delete item: " + item.getName() + "?"));
+        new ConfirmDeleteDialog<ItemDto>(() -> paginatedGrid.loadPage(0))
+                .show(item, ItemDto::getName, it -> itemService.deleteItem(it.getId()).block());
 
-        Button confirm = new Button("Delete", event -> {
-            try {
-                itemService.deleteItem(item.getId()).block();
-                dialog.close();
-                Notification.show("Item deleted", 3000, Notification.Position.TOP_CENTER);
-                paginatedGrid.loadPage(0);
-            } catch (Exception e) {
-                Notification.show("Failed to delete item", 3000, Notification.Position.TOP_CENTER)
-                        .addThemeVariants(NotificationVariant.LUMO_ERROR);
-            }
-        });
-        confirm.addThemeVariants(ButtonVariant.LUMO_ERROR);
-
-        Button cancel = new Button("Cancel", event -> dialog.close());
-
-        dialog.add(new HorizontalLayout(confirm, cancel));
-        dialog.open();
     }
 
-    private String formatDate(LocalDateTime dateTime) {
-        return dateTime != null ?
-                DateTimeFormatter.ofLocalizedDateTime(FormatStyle.SHORT).format(dateTime) :
-                "-";
-    }
 }
